--- a/tests/Packages/Install_basePackages.ipynb
+++ b/tests/Packages/Install_basePackages.ipynb
@@ -31,7 +31,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\"c:\\Users\\gusta\\AppData\\Local\\Programs\\Python\\Python312\\python.exe\"\n"
+      "\"c:\\Users\\gusta\\Documents\\GitHub\\Arenz_Group_Python\\.venv\\Scripts\\python.exe\"\n"
      ]
     }
    ],
@@ -539,19 +539,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: pandas in c:\\users\\gusta\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (2.2.2)\n",
-      "Requirement already satisfied: numpy>=1.26.0 in c:\\users\\gusta\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from pandas) (1.26.3)\n",
-      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\gusta\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from pandas) (2.8.2)\n",
-      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\gusta\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from pandas) (2024.1)\n",
-      "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\gusta\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from pandas) (2024.1)\n",
-      "Requirement already satisfied: six>=1.5 in c:\\users\\gusta\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from python-dateutil>=2.8.2->pandas) (1.16.0)\n"
+      "Collecting pooch\n",
+      "  Downloading pooch-1.8.2-py3-none-any.whl.metadata (10 kB)\n",
+      "Requirement already satisfied: platformdirs>=2.5.0 in c:\\users\\gusta\\documents\\github\\arenz_group_python\\.venv\\lib\\site-packages (from pooch) (4.2.2)\n",
+      "Requirement already satisfied: packaging>=20.0 in c:\\users\\gusta\\documents\\github\\arenz_group_python\\.venv\\lib\\site-packages (from pooch) (24.1)\n",
+      "Collecting requests>=2.19.0 (from pooch)\n",
+      "  Downloading requests-2.32.3-py3-none-any.whl.metadata (4.6 kB)\n",
+      "Collecting charset-normalizer<4,>=2 (from requests>=2.19.0->pooch)\n",
+      "  Downloading charset_normalizer-3.3.2-cp311-cp311-win_amd64.whl.metadata (34 kB)\n",
+      "Collecting idna<4,>=2.5 (from requests>=2.19.0->pooch)\n",
+      "  Downloading idna-3.7-py3-none-any.whl.metadata (9.9 kB)\n",
+      "Collecting urllib3<3,>=1.21.1 (from requests>=2.19.0->pooch)\n",
+      "  Downloading urllib3-2.2.2-py3-none-any.whl.metadata (6.4 kB)\n",
+      "Collecting certifi>=2017.4.17 (from requests>=2.19.0->pooch)\n",
+      "  Downloading certifi-2024.7.4-py3-none-any.whl.metadata (2.2 kB)\n",
+      "Downloading pooch-1.8.2-py3-none-any.whl (64 kB)\n",
+      "   ---------------------------------------- 0.0/64.6 kB ? eta -:--:--\n",
+      "   ---------------------------------------- 64.6/64.6 kB 3.4 MB/s eta 0:00:00\n",
+      "Downloading requests-2.32.3-py3-none-any.whl (64 kB)\n",
+      "   ---------------------------------------- 0.0/64.9 kB ? eta -:--:--\n",
+      "   ---------------------------------------- 64.9/64.9 kB 1.8 MB/s eta 0:00:00\n",
+      "Downloading certifi-2024.7.4-py3-none-any.whl (162 kB)\n",
+      "   ---------------------------------------- 0.0/163.0 kB ? eta -:--:--\n",
+      "   ---------------------------------------- 163.0/163.0 kB 3.2 MB/s eta 0:00:00\n",
+      "Downloading charset_normalizer-3.3.2-cp311-cp311-win_amd64.whl (99 kB)\n",
+      "   ---------------------------------------- 0.0/99.9 kB ? eta -:--:--\n",
+      "   ------------------------------------ --- 92.2/99.9 kB ? eta -:--:--\n",
+      "   ---------------------------------------- 99.9/99.9 kB 1.9 MB/s eta 0:00:00\n",
+      "Downloading idna-3.7-py3-none-any.whl (66 kB)\n",
+      "   ---------------------------------------- 0.0/66.8 kB ? eta -:--:--\n",
+      "   ---------------------------------------- 66.8/66.8 kB 3.5 MB/s eta 0:00:00\n",
+      "Downloading urllib3-2.2.2-py3-none-any.whl (121 kB)\n",
+      "   ---------------------------------------- 0.0/121.4 kB ? eta -:--:--\n",
+      "   ---------------------------------------- 121.4/121.4 kB 3.6 MB/s eta 0:00:00\n",
+      "Installing collected packages: urllib3, idna, charset-normalizer, certifi, requests, pooch\n",
+      "Successfully installed certifi-2024.7.4 charset-normalizer-3.3.2 idna-3.7 pooch-1.8.2 requests-2.32.3 urllib3-2.2.2\n"
      ]
     },
     {
@@ -559,13 +588,13 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "[notice] A new release of pip is available: 23.3.2 -> 24.1.2\n",
+      "[notice] A new release of pip is available: 24.1.1 -> 24.1.2\n",
       "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
      ]
     }
    ],
    "source": [
-    "!{path_to_executable} -m pip install pandas"
+    "!{path_to_executable} -m pip install pooch"
    ]
   }
  ],
@@ -585,7 +614,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
